--- a/frontend/admin/login.html
+++ b/frontend/admin/login.html
@@ -8,99 +8,234 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="../assets/css/style.css">
     <style>
+        :root {
+            --primary: #1a1a2e;
+            --primary-light: #16213e;
+            --secondary: #d4af37;
+            --secondary-dark: #b8860b;
+            --text-light: #f4f4f4;
+            --white: #ffffff;
+            --error: #ef4444;
+        }
+
         body {
-            background: var(--bg-dark);
+            background: var(--primary);
             height: 100vh;
             display: flex;
             align-items: center;
             justify-content: center;
+            margin: 0;
+            font-family: 'Inter', sans-serif;
+            overflow: hidden;
+            position: relative;
+        }
+
+        /* Abstract Background Decor */
+        body::before {
+            content: '';
+            position: absolute;
+            width: 500px;
+            height: 500px;
+            background: radial-gradient(circle, rgba(212, 175, 55, 0.1) 0%, transparent 70%);
+            top: -200px;
+            left: -200px;
+            z-index: 0;
+        }
+
+        body::after {
+            content: '';
+            position: absolute;
+            width: 600px;
+            height: 600px;
+            background: radial-gradient(circle, rgba(212, 175, 55, 0.05) 0%, transparent 70%);
+            bottom: -300px;
+            right: -200px;
+            z-index: 0;
+        }
+
+        .login-container {
+            position: relative;
+            z-index: 1;
+            width: 100%;
+            max-width: 420px;
+            padding: 20px;
         }
 
         .login-card {
-            background: var(--white);
-            padding: 50px;
-            border-radius: var(--radius-lg);
-            width: 100%;
-            max-width: 450px;
-            box-shadow: 0 20px 40px rgba(0, 0, 0, 0.3);
+            background: rgba(255, 255, 255, 0.95);
+            backdrop-filter: blur(10px);
+            padding: 50px 40px;
+            border-radius: 20px;
+            box-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.5);
+            border: 1px solid rgba(255, 255, 255, 0.1);
         }
 
-        .login-card h2 {
-            color: var(--primary);
+        .login-header {
             text-align: center;
-            margin-bottom: 30px;
+            margin-bottom: 40px;
+        }
+
+        .login-header h1 {
+            color: var(--primary);
+            font-size: 1.8rem;
+            font-weight: 800;
+            margin: 0;
+            letter-spacing: -0.025em;
+        }
+
+        .login-header p {
+            color: #64748b;
+            font-size: 0.95rem;
+            margin-top: 8px;
         }
 
         .form-group {
-            margin-bottom: 20px;
+            margin-bottom: 25px;
         }
 
         .form-group label {
             display: block;
             margin-bottom: 8px;
-            font-weight: 600;
+            font-weight: 700;
+            font-size: 0.85rem;
+            color: var(--primary);
+            text-transform: uppercase;
+            letter-spacing: 0.05em;
+        }
+
+        .input-wrapper {
+            position: relative;
+        }
+
+        .input-wrapper i {
+            position: absolute;
+            left: 15px;
+            top: 50%;
+            transform: translateY(-50%);
+            color: #94a3b8;
+            font-size: 1rem;
         }
 
         .form-group input {
             width: 100%;
-            padding: 12px;
-            border: 1px solid #ddd;
-            border-radius: var(--radius-sm);
+            padding: 14px 14px 14px 45px;
+            background: #f8fafc;
+            border: 2px solid #e2e8f0;
+            border-radius: 12px;
+            font-size: 1rem;
+            transition: all 0.3s ease;
             box-sizing: border-box;
         }
 
+        .form-group input:focus {
+            outline: none;
+            border-color: var(--secondary);
+            background: white;
+            box-shadow: 0 0 0 4px rgba(212, 175, 55, 0.1);
+        }
+
+        .login-btn {
+            width: 100%;
+            padding: 16px;
+            background: var(--primary);
+            color: white;
+            border: none;
+            border-radius: 12px;
+            font-size: 1rem;
+            font-weight: 700;
+            cursor: pointer;
+            transition: all 0.3s ease;
+            margin-top: 10px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            gap: 10px;
+        }
+
+        .login-btn:hover {
+            background: #000;
+            transform: translateY(-2px);
+            box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.2);
+        }
+
+        .login-btn:disabled {
+            opacity: 0.7;
+            cursor: not-allowed;
+            transform: none;
+        }
+
         .error-msg {
-            color: #d9534f;
-            background: #f2dede;
-            padding: 10px;
-            border-radius: 4px;
-            margin-bottom: 20px;
-            text-align: center;
-            display: none;
-        }
-
-        .back-link {
-            text-align: center;
-            margin-top: 20px;
-        }
-
-        .back-link a {
-            color: var(--text-muted);
+            background: #fef2f2;
+            color: var(--error);
+            padding: 12px;
+            border-radius: 10px;
+            margin-bottom: 25px;
             font-size: 0.9rem;
+            text-align: center;
+            border: 1px solid #fee2e2;
+            display: none;
+            font-weight: 600;
+        }
+
+        .back-home {
+            text-align: center;
+            margin-top: 30px;
+        }
+
+        .back-home a {
+            color: #64748b;
+            font-size: 0.9rem;
+            text-decoration: none;
+            font-weight: 600;
+            transition: 0.2s;
+        }
+
+        .back-home a:hover {
+            color: var(--secondary-dark);
         }
     </style>
 </head>
 
 <body>
-    <div class="login-card">
-        <h2>Admin Portal</h2>
-
-        <div class="error-msg" id="error-msg"></div>
-
-        <form id="login-form">
-            <div class="form-group">
-                <label>Username</label>
-                <input type="text" name="username" id="username" required>
+    <div class="login-container">
+        <div class="login-card">
+            <div class="login-header">
+                <h1>SVES Portal</h1>
+                <p>Welcome back, Administrator</p>
             </div>
-            <div class="form-group">
-                <label>Password</label>
-                <input type="password" name="password" id="password" required>
+
+            <div class="error-msg" id="error-msg"></div>
+
+            <form id="login-form">
+                <div class="form-group">
+                    <label>Username</label>
+                    <div class="input-wrapper">
+                        <i class="fas fa-user"></i>
+                        <input type="text" id="username" placeholder="Enter username" autocomplete="username" required>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label>Password</label>
+                    <div class="input-wrapper">
+                        <i class="fas fa-lock"></i>
+                        <input type="password" id="password" placeholder="••••••••" autocomplete="current-password"
+                            required>
+                    </div>
+                </div>
+                <button type="submit" class="login-btn" id="login-btn">
+                    <span>Secure Login</span>
+                    <i class="fas fa-arrow-right"></i>
+                </button>
+            </form>
+
+            <div class="back-home">
+                <a href="../index.html"><i class="fas fa-long-arrow-alt-left"></i> Back to Campus Website</a>
             </div>
-            <button type="submit" class="btn btn-primary" style="width: 100%; margin-top: 10px;"
-                id="login-btn">Login</button>
-            <p class="back-link">
-                <a href="../index.html"><i class="fas fa-arrow-left"></i> Back to Website</a>
-            </p>
-        </form>
+        </div>
     </div>
 
     <script src="../assets/js/api.js"></script>
     <script>
-        // Check if already logged in
-        if (isLoggedIn()) {
-            window.location.href = 'dashboard.html';
-        }
-
         const loginForm = document.getElementById('login-form');
         const errorMsg = document.getElementById('error-msg');
         const loginBtn = document.getElementById('login-btn');
@@ -111,9 +246,12 @@
             const username = document.getElementById('username').value;
             const password = document.getElementById('password').value;
 
-            loginBtn.textContent = 'Logging in...';
-            loginBtn.disabled = true;
-            errorMsg.style.display = 'none';
+            if (!username || !password) {
+                showError('Please enter both credentials.');
+                return;
+            }
+
+            setLoading(true);
 
             try {
                 const response = await fetch(`${API_BASE_URL}/auth/login`, {
@@ -125,20 +263,37 @@
                 const data = await response.json();
 
                 if (response.ok) {
-                    setToken(data.token);
+                    setToken(data.token, data.admin);
                     window.location.href = 'dashboard.html';
                 } else {
-                    errorMsg.textContent = data.error || 'Login failed';
-                    errorMsg.style.display = 'block';
+                    showError(data.error || 'Access denied. Invalid credentials.');
                 }
             } catch (error) {
-                errorMsg.textContent = 'Connection error. Is the server running?';
-                errorMsg.style.display = 'block';
+                showError('Server connection failed. Try again later.');
             } finally {
-                loginBtn.textContent = 'Login';
-                loginBtn.disabled = false;
+                setLoading(false);
             }
         });
+
+        function showError(msg) {
+            errorMsg.textContent = msg;
+            errorMsg.style.display = 'block';
+        }
+
+        function setLoading(isLoading) {
+            const span = loginBtn.querySelector('span');
+            const icon = loginBtn.querySelector('i');
+            if (isLoading) {
+                span.textContent = 'Verifying...';
+                icon.className = 'fas fa-spinner fa-spin';
+                loginBtn.disabled = true;
+                errorMsg.style.display = 'none';
+            } else {
+                span.textContent = 'Secure Login';
+                icon.className = 'fas fa-arrow-right';
+                loginBtn.disabled = false;
+            }
+        }
     </script>
 </body>
 
