--- a/frontend/admin/dashboard.html
+++ b/frontend/admin/dashboard.html
@@ -104,6 +104,7 @@
             <a href="manage-gallery.html"><i class="fas fa-images"></i> Manage Gallery</a>
             <a href="manage-announcements.html"><i class="fas fa-bullhorn"></i> Announcements</a>
             <a href="manage-faculty.html"><i class="fas fa-user-tie"></i> Faculty</a>
+            <a href="manage-admissions.html"><i class="fas fa-user-graduate"></i> Admissions</a>
             <a href="#" id="logout-btn" style="margin-top: 50px; color: #ff6b6b;"><i class="fas fa-sign-out-alt"></i>
                 Logout</a>
         </div>
@@ -145,6 +146,13 @@
                     <p class="stat-val" id="stat-faculty">-</p>
                 </div>
                 <i class="fas fa-user-tie" style="font-size: 2.5rem; color: #eee;"></i>
+            </div>
+            <div class="stat-card">
+                <div>
+                    <h3>Online Admissions</h3>
+                    <p class="stat-val" id="stat-admissions">-</p>
+                </div>
+                <i class="fas fa-user-graduate" style="font-size: 2.5rem; color: #eee;"></i>
             </div>
         </div>
 
@@ -188,6 +196,7 @@
                 document.getElementById('stat-gallery').textContent = stats.gallery;
                 document.getElementById('stat-announcements').textContent = stats.announcements;
                 document.getElementById('stat-faculty').textContent = stats.faculty;
+                document.getElementById('stat-admissions').textContent = stats.admissions;
             } catch (error) {
                 console.error('Failed to load stats:', error);
             }
